# osimager

./: .gitignore  404.html  CLAUDE.md  Makefile  OLD_PLAN.md  PLAN.md  README.md  docimp.md  exists.sh  index.html  install-plugins.sh  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml
architecture/build-pipeline/: index.html
architecture/configuration-merging/: index.html
architecture/file-generation/: index.html
architecture/overview/: index.html
architecture/template-engine/: index.html
backend/: README.md  TESTING.md  __init__.py  main.py  requirements.txt  run_server.py  run_with_venv.sh
backend/models/: build.py  spec.py
backend/routers/: builds.py  config.py  locations.py  platforms.py  specs.py  status.py
backend/services/: build_manager.py  spec_service.py
backend/static/: index.html
backend/tests/: __init__.py  conftest.py  test_main.py  test_specs.py
backend/utils/: __init__.py  config.py
configuration/credential-setup/: index.html
configuration/location-setup/: index.html
data/locations/: dev.json  esx.json  lab.json  local.json  pnet.json
data/tasks/: Debian_post.yml  RedHat_pre.yml  gcp_linux_post.yml  proxmox_pre.yml  spec.yml  vsphere_post.yml
doc/: CONFIGURATION.md  CONFIG_README.md  DEPLOYMENT.md  GETTING_STARTED.md  INSTALL.md  INSTALLATION_SUMMARY.md  INSTALLER_README.md  LOCATION_SETUP.md  PLAN-user-config.md  PLANNING.md  TASK.md  VSERV_DEPLOYMENT.md  example-location.json  example-location.toml  example-vault
docs/: generate.py  getting-started.md  index.md  installation.md
docs/architecture/: build-pipeline.md  configuration-merging.md  file-generation.md  overview.md  template-engine.md
docs/configuration/: credential-setup.md  location-setup.md
docs/reference/: cli-reference.md  defs-reference.md  platform-reference.md  spec-reference.md  supported-os.md
etc/: osimager.conf
frontend/: .gitignore  README.md  dev-server.sh  eslint.config.js  index.html  node_modules  package.json  pnpm-lock.yaml  setup.sh  tailwind.config.js
getting-started/: index.html
installation/: index.html
osimager/: cli.md  cli.py  constants.py  core.py  utils.py
search/: search_index.json
(+128 files in other folders)
