[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osimager"
dynamic = ["version"]
description = "Multi-platform OS image builder using HashiCorp Packer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Steve Shoecraft"}
]
keywords = ["packer", "vm", "image", "builder", "kickstart", "preseed", "ansible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "dnspython>=2.0",
    "hvac>=1.0",
    "requests>=2.25",
    "tomli>=1.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/sshoecraft/osimager"
Repository = "https://github.com/sshoecraft/osimager"
Documentation = "https://sshoecraft.github.io/osimager"
Issues = "https://github.com/sshoecraft/osimager/issues"

[project.scripts]
mkosimage = "osimager.cli:main_mkosimage"
rfosimage = "osimager.cli:main_rfosimage"
mkvenv = "osimager.cli:main_mkvenv"

[tool.setuptools.dynamic]
version = {attr = "osimager.constants.OSIMAGER_VERSION"}

[tool.setuptools.packages.find]
include = ["osimager*"]

[tool.setuptools.package-data]
osimager = [
    "data/**/*.json",
    "data/**/*.cfg",
    "data/**/*.sh",
    "data/**/*.yml",
    "data/**/*.xml",
    "data/**/*.j2",
    "data/**/*.seed",
    "data/**/*.fix",
    "data/**/configure_system",
    "data/**/banner",
    "data/**/findcd",
    "data/**/meta-data",
    "data/**/user-data",
    "data/**/Autounattend*.xml",
    "data/examples/*",
]
